src/snapshots/cronexpr__parser__tests__parse_crontab_failed-20.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 1 1 5\").unwrap_err()"
---
malformed expression:
0 0 1 1 5
         ^ missing timezone
