src/snapshots/cronexpr__parser__tests__parse_crontab_failed-21.snap
---
source: src/parser.rs
expression: "parse_crontab(\"* 4 * * *\").unwrap_err()"
---
failed to parse crontab expression:
* 4 * * *
          ^ failed to find timezone ; for a list of time zones, see the list of tz database time zones on Wikipedia: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
