src/snapshots/cronexpr__parser__tests__parse_crontab_failed-23.snap
---
source: src/parser.rs
expression: "parse_crontab_with(\"0 0 1 1 5\", options).unwrap_err()"
---
failed to parse crontab expression:
0 0 1 1 5
         ^ missing timezone
