src/snapshots/cronexpr__parser__tests__parse_crontab_failed-24.snap
---
source: src/parser.rs
expression: "parse_crontab(\"\").unwrap_err()"
---
failed to parse crontab expression:

^ cannot be empty
