src/snapshots/cronexpr__parser__tests__parse_crontab_failed-25.snap
---
source: src/parser.rs
expression: "parse_crontab(\"H * * * * UTC\").unwrap_err()"
---
failed to parse crontab expression:
H * * * * UTC
^ malformed expression
