src/snapshots/cronexpr__parser__tests__parse_crontab_failed-3.snap
---
source: src/parser.rs
expression: "parse_crontab(\"* 5-4 * * * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
* 5-4 * * * Asia/Shanghai
  ^ range must be in ascending order; found 5-4
