src/snapshots/cronexpr__parser__tests__parse_crontab_failed-5.snap
---
source: src/parser.rs
expression: "parse_crontab(\"* 0-24 * * * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
* 0-24 * * * Asia/Shanghai
    ^ value must be in range 0..=23; found 24
