src/snapshots/cronexpr__parser__tests__parse_crontab_failed-7.snap
---
source: src/parser.rs
expression: "parse_crontab(\"32-300 * * * * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
32-300 * * * * Asia/Shanghai
   ^ value must be in range 0..=59; found 300
