src/snapshots/cronexpr__parser__tests__parse_crontab_failed.snap
---
source: src/parser.rs
expression: "parse_crontab(\"invalid 4 * * * Asia/Shanghai\").unwrap_err()"
---
failed to parse crontab expression:
invalid 4 * * * Asia/Shanghai
^ malformed expression
