src/snapshots/cronexpr__parser__tests__parse_crontab_success-10.snap
---
source: src/parser.rs
expression: "parse_crontab(\"1-10,2,10,50 1 1 1 * Asia/Shanghai\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            9,
            10,
            50,
        },
    },
    hours: PossibleLiterals {
        values: {
            1,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_month: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_week: PossibleDaysOfWeek {
        literals: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
        last_days_of_week: {},
        nth_days_of_week: {},
    },
    timezone: TimeZone(
        TZif(
            "Asia/Shanghai",
        ),
    ),
}
